--- a/index.html
+++ b/index.html
@@ -21,172 +21,188 @@
   </head>
   <body>
     <header class="page-header">
-      <nav class="header-nav">
-        <a class="logo" href="./index.html"
-          >Web<span class="header-logo-part">Studio</span></a
-        >
-        <ul class="nav-list">
-          <li class="nav-item">
-            <a class="nav-link" href="./index.html">Studio</a>
-          </li>
-          <li class="nav-item"><a class="nav-link" href="">Portfolio</a></li>
-          <li class="nav-item"><a class="nav-link" href="">Contacts</a></li>
-        </ul>
-      </nav>
-      <address class="contacts">
-        <ul class="contacts-list">
-          <li class="contacts-item">
-            <a class="contacts-link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="contacts-item">
-            <a class="contacts-link" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+      <div class="container header-container">
+        <nav class="header-nav">
+          <a class="logo header-logo" href="./index.html"
+            >Web<span class="header-logo-part">Studio</span></a
+          >
+          <ul class="nav-list">
+            <li class="nav-item">
+              <a class="nav-link" href="./index.html">Studio</a>
+            </li>
+            <li class="nav-item"><a class="nav-link" href="">Portfolio</a></li>
+            <li class="nav-item"><a class="nav-link" href="">Contacts</a></li>
+          </ul>
+        </nav>
+        <address class="contacts">
+          <ul class="contacts-list">
+            <li class="contacts-item">
+              <a class="contacts-link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="contacts-item">
+              <a class="contacts-link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <main>
       <section class="hero">
-        <h1 class="hero-title">Effective Solutions for Your Business</h1>
-        <button class="hero-btn" type="button">Order Service</button>
+        <div class="container">
+          <h1 class="hero-title">Effective Solutions for Your Business</h1>
+          <button class="hero-btn" type="button">Order Service</button>
+        </div>
       </section>
       <section class="features">
-        <h2 class="features-title">Features</h2>
-        <ul class="features-list">
-          <li>
-            <h3 class="features-list-title">Strategy</h3>
-            <p class="features-list-item">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li>
-            <h3 class="features-list-title">Punctuality</h3>
-            <p class="features-list-item">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li>
-            <h3 class="features-list-title">Diligence</h3>
-            <p class="features-list-item">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li>
-            <h3 class="features-list-title">Technologies</h3>
-            <p class="features-list-item">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="features-title">Features</h2>
+          <ul class="features-list">
+            <li>
+              <h3 class="features-list-title">Strategy</h3>
+              <p class="features-list-item">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li>
+              <h3 class="features-list-title">Punctuality</h3>
+              <p class="features-list-item">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li>
+              <h3 class="features-list-title">Diligence</h3>
+              <p class="features-list-item">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li>
+              <h3 class="features-list-title">Technologies</h3>
+              <p class="features-list-item">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <section class="our-team">
-        <h2 class="our-team-title">Our Team</h2>
-        <ul>
-          <li class="our-team-list">
-            <img
-              src="./images/1_mark_guerrero.jpg"
-              alt="Mark Guerrero"
-              width="264"
-            />
-            <h3 class="our-team-list-title">Mark Guerrero</h3>
-            <p class="our-team-list-item">Product Designer</p>
-          </li>
-          <li class="our-team-list">
-            <img src="./images/2_tom_ford.jpg" alt="Tom Ford" width="264" />
-            <h3 class="our-team-list-title">Tom Ford</h3>
-            <p class="our-team-list-item">Frontend Developer</p>
-          </li>
-          <li class="our-team-list">
-            <img
-              src="./images/3_camila_garcia.jpg"
-              alt="Camila Garcia"
-              width="264"
-            />
-            <h3 class="our-team-list-title">Camila Garcia</h3>
-            <p class="our-team-list-item">Marketing</p>
-          </li>
-          <li class="our-team-list">
-            <img
-              src="./images/4_daniel_wilson.jpg"
-              alt="Daniel Wilson"
-              width="264"
-            />
-            <h3 class="our-team-list-title">Daniel Wilson</h3>
-            <p class="our-team-list-item">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="our-team-title">Our Team</h2>
+          <ul>
+            <li class="our-team-list">
+              <img
+                src="./images/1_mark_guerrero.jpg"
+                alt="Mark Guerrero"
+                width="264"
+              />
+              <h3 class="our-team-list-title">Mark Guerrero</h3>
+              <p class="our-team-list-item">Product Designer</p>
+            </li>
+            <li class="our-team-list">
+              <img src="./images/2_tom_ford.jpg" alt="Tom Ford" width="264" />
+              <h3 class="our-team-list-title">Tom Ford</h3>
+              <p class="our-team-list-item">Frontend Developer</p>
+            </li>
+            <li class="our-team-list">
+              <img
+                src="./images/3_camila_garcia.jpg"
+                alt="Camila Garcia"
+                width="264"
+              />
+              <h3 class="our-team-list-title">Camila Garcia</h3>
+              <p class="our-team-list-item">Marketing</p>
+            </li>
+            <li class="our-team-list">
+              <img
+                src="./images/4_daniel_wilson.jpg"
+                alt="Daniel Wilson"
+                width="264"
+              />
+              <h3 class="our-team-list-title">Daniel Wilson</h3>
+              <p class="our-team-list-item">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
       <section class="our-portfolio">
-        <h2 class="our-portfolio-title">Our Portfolio</h2>
-        <ul class="our-portfolio-list">
-          <li>
-            <img src="./images/banking-app.jpg" alt="Banking App" width="360" />
-            <h3 class="our-portfolio-list-title">Banking App</h3>
-            <p class="our-portfolio-list-item">App</p>
-          </li>
-          <li>
-            <img
-              src="./images/cashless-payment.jpg"
-              alt="Cashless Payment"
-              width="360"
-            />
-            <h3 class="our-portfolio-list-title">Cashless Payment</h3>
-            <p class="our-portfolio-list-item">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/meditation-app.jpg"
-              alt="Meditation App"
-              width="360"
-            />
-            <h3 class="our-portfolio-list-title">Meditation App</h3>
-            <p class="our-portfolio-list-item">App</p>
-          </li>
-          <li>
-            <img
-              src="./images/taxi-service.jpg"
-              alt="Taxi Service"
-              width="360"
-            />
-            <h3 class="our-portfolio-list-title">Taxi Service</h3>
-            <p class="our-portfolio-list-item">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/screen-illustrations.jpg"
-              alt="Screen Illustrations"
-              width="360"
-            />
-            <h3 class="our-portfolio-list-title">Screen Illustrations</h3>
-            <p class="our-portfolio-list-item">Design</p>
-          </li>
-          <li>
-            <img
-              src="./images/online-courses.jpg"
-              alt="Online Courses"
-              width="360"
-            />
-            <h3 class="our-portfolio-list-title">Online Courses</h3>
-            <p class="our-portfolio-list-item">Marketing</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="our-portfolio-title">Our Portfolio</h2>
+          <ul class="our-portfolio-list">
+            <li>
+              <img
+                src="./images/banking-app.jpg"
+                alt="Banking App"
+                width="360"
+              />
+              <h3 class="our-portfolio-list-title">Banking App</h3>
+              <p class="our-portfolio-list-item">App</p>
+            </li>
+            <li>
+              <img
+                src="./images/cashless-payment.jpg"
+                alt="Cashless Payment"
+                width="360"
+              />
+              <h3 class="our-portfolio-list-title">Cashless Payment</h3>
+              <p class="our-portfolio-list-item">Marketing</p>
+            </li>
+            <li>
+              <img
+                src="./images/meditation-app.jpg"
+                alt="Meditation App"
+                width="360"
+              />
+              <h3 class="our-portfolio-list-title">Meditation App</h3>
+              <p class="our-portfolio-list-item">App</p>
+            </li>
+            <li>
+              <img
+                src="./images/taxi-service.jpg"
+                alt="Taxi Service"
+                width="360"
+              />
+              <h3 class="our-portfolio-list-title">Taxi Service</h3>
+              <p class="our-portfolio-list-item">Marketing</p>
+            </li>
+            <li>
+              <img
+                src="./images/screen-illustrations.jpg"
+                alt="Screen Illustrations"
+                width="360"
+              />
+              <h3 class="our-portfolio-list-title">Screen Illustrations</h3>
+              <p class="our-portfolio-list-item">Design</p>
+            </li>
+            <li>
+              <img
+                src="./images/online-courses.jpg"
+                alt="Online Courses"
+                width="360"
+              />
+              <h3 class="our-portfolio-list-title">Online Courses</h3>
+              <p class="our-portfolio-list-item">Marketing</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="footer">
-      <a class="logo" href="./index.html"
-        >Web<span class="footer-logo-part">Studio</span></a
-      >
-      <p class="footer-item">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <a class="logo" href="./index.html"
+          >Web<span class="footer-logo-part">Studio</span></a
+        >
+        <p class="footer-item">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
