--- a/index.html
+++ b/index.html
@@ -61,28 +61,28 @@
         <div class="container">
           <h2 class="features-title">Features</h2>
           <ul class="features-list">
-            <li>
+            <li class="features-list-li">
               <h3 class="features-list-title">Strategy</h3>
               <p class="features-list-item">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
             </li>
-            <li>
+            <li class="features-list-li">
               <h3 class="features-list-title">Punctuality</h3>
               <p class="features-list-item">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
-            <li>
+            <li class="features-list-li">
               <h3 class="features-list-title">Diligence</h3>
               <p class="features-list-item">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
-            <li>
+            <li class="features-list-li">
               <h3 class="features-list-title">Technologies</h3>
               <p class="features-list-item">
                 Design practice focused on digital experiences. We bring forth a
