--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       </section>
       <section class="features">
         <div class="container">
-          <h2 class="features-title">Features</h2>
+          <h2 class="features-title visually-hidden">Features</h2>
           <ul class="features-list">
             <li class="features-list-li">
               <h3 class="features-list-title">Strategy</h3>
