add section our team

--- a/index.html
+++ b/index.html
@@ -95,20 +95,24 @@
       <section class="our-team">
         <div class="container">
           <h2 class="our-team-title">Our Team</h2>
-          <ul>
+          <ul class="our-team-list-ul">
             <li class="our-team-list">
               <img
                 src="./images/1_mark_guerrero.jpg"
                 alt="Mark Guerrero"
                 width="264"
               />
-              <h3 class="our-team-list-title">Mark Guerrero</h3>
-              <p class="our-team-list-item">Product Designer</p>
+              <div class="our-team-name-position">
+                <h3 class="our-team-list-title">Mark Guerrero</h3>
+                <p class="our-team-list-item">Product Designer</p>
+              </div>
             </li>
             <li class="our-team-list">
               <img src="./images/2_tom_ford.jpg" alt="Tom Ford" width="264" />
-              <h3 class="our-team-list-title">Tom Ford</h3>
-              <p class="our-team-list-item">Frontend Developer</p>
+              <div class="our-team-name-position">
+                <h3 class="our-team-list-title">Tom Ford</h3>
+                <p class="our-team-list-item">Frontend Developer</p>
+              </div>
             </li>
             <li class="our-team-list">
               <img
@@ -116,8 +120,10 @@
                 alt="Camila Garcia"
                 width="264"
               />
-              <h3 class="our-team-list-title">Camila Garcia</h3>
-              <p class="our-team-list-item">Marketing</p>
+              <div class="our-team-name-position">
+                <h3 class="our-team-list-title">Camila Garcia</h3>
+                <p class="our-team-list-item">Marketing</p>
+              </div>
             </li>
             <li class="our-team-list">
               <img
@@ -125,8 +131,10 @@
                 alt="Daniel Wilson"
                 width="264"
               />
-              <h3 class="our-team-list-title">Daniel Wilson</h3>
-              <p class="our-team-list-item">UI Designer</p>
+              <div class="our-team-name-position">
+                <h3 class="our-team-list-title">Daniel Wilson</h3>
+                <p class="our-team-list-item">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
