add section our porfolio / footer

--- a/index.html
+++ b/index.html
@@ -143,59 +143,71 @@
         <div class="container">
           <h2 class="our-portfolio-title">Our Portfolio</h2>
           <ul class="our-portfolio-list">
-            <li>
+            <li class="our-portfolio-list-li">
               <img
                 src="./images/banking-app.jpg"
                 alt="Banking App"
                 width="360"
               />
-              <h3 class="our-portfolio-list-title">Banking App</h3>
-              <p class="our-portfolio-list-item">App</p>
+              <div class="our-portfolio-name-cat-app">
+                <h3 class="our-portfolio-list-title">Banking App</h3>
+                <p class="our-portfolio-list-item">App</p>
+              </div>
             </li>
-            <li>
+            <li class="our-portfolio-list-li">
               <img
                 src="./images/cashless-payment.jpg"
                 alt="Cashless Payment"
                 width="360"
               />
-              <h3 class="our-portfolio-list-title">Cashless Payment</h3>
-              <p class="our-portfolio-list-item">Marketing</p>
+              <div class="our-portfolio-name-cat-app">
+                <h3 class="our-portfolio-list-title">Cashless Payment</h3>
+                <p class="our-portfolio-list-item">Marketing</p>
+              </div>
             </li>
-            <li>
+            <li class="our-portfolio-list-li">
               <img
                 src="./images/meditation-app.jpg"
                 alt="Meditation App"
                 width="360"
               />
-              <h3 class="our-portfolio-list-title">Meditation App</h3>
-              <p class="our-portfolio-list-item">App</p>
+              <div class="our-portfolio-name-cat-app">
+                <h3 class="our-portfolio-list-title">Meditation App</h3>
+                <p class="our-portfolio-list-item">App</p>
+              </div>
             </li>
-            <li>
+            <li class="our-portfolio-list-li">
               <img
                 src="./images/taxi-service.jpg"
                 alt="Taxi Service"
                 width="360"
               />
-              <h3 class="our-portfolio-list-title">Taxi Service</h3>
-              <p class="our-portfolio-list-item">Marketing</p>
+              <div class="our-portfolio-name-cat-app">
+                <h3 class="our-portfolio-list-title">Taxi Service</h3>
+                <p class="our-portfolio-list-item">Marketing</p>
+              </div>
             </li>
-            <li>
+            <li class="our-portfolio-list-li">
               <img
                 src="./images/screen-illustrations.jpg"
                 alt="Screen Illustrations"
                 width="360"
               />
-              <h3 class="our-portfolio-list-title">Screen Illustrations</h3>
-              <p class="our-portfolio-list-item">Design</p>
+              <div class="our-portfolio-name-cat-app">
+                <h3 class="our-portfolio-list-title">Screen Illustrations</h3>
+                <p class="our-portfolio-list-item">Design</p>
+              </div>
             </li>
-            <li>
+            <li class="our-portfolio-list-li">
               <img
                 src="./images/online-courses.jpg"
                 alt="Online Courses"
                 width="360"
               />
-              <h3 class="our-portfolio-list-title">Online Courses</h3>
-              <p class="our-portfolio-list-item">Marketing</p>
+              <div class="our-portfolio-name-cat-app">
+                <h3 class="our-portfolio-list-title">Online Courses</h3>
+                <p class="our-portfolio-list-item">Marketing</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -203,7 +215,7 @@
     </main>
     <footer class="footer">
       <div class="container">
-        <a class="logo" href="./index.html"
+        <a class="logo logo-footer" href="./index.html"
           >Web<span class="footer-logo-part">Studio</span></a
         >
         <p class="footer-item">
